--- a/css/web.css
+++ b/css/web.css
@@ -6,33 +6,71 @@ main {
 }
 
 header {
+  height: 55px;
   background-color: #0080FF;
+  font-family: Arial;
+  color: #FFFFFF;
+  margin-left: -10px;
+  margin-right:-10px;
+  padding-top: 30px;
+  margin-top: -10px;
+}
+
+h1 {
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  margin-top: -10px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-size: 28pt;
 }
 
 nav {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin-left:-10px;
+  margin-right:-10px;
   background-color: #6B6D70;
   font-family: Arial;
   font-size: 20px;
+  padding-left: 100px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
-#wrapper {
-  margin-left:auto;
-  margin-right:auto;
-  width: 90%;
-  min-width: 500;
-  max-width: 1360px;
+body {
+    background-color: #ACACAC;
 }
 
 footer {
   padding-top: 50px;
+  padding-bottom: 20px;
   text-align: center;
   font-weight: bold;
   font-style: italic;
   color: #000000;
 }
 
+#wrapper {
+  padding-top: 10px;
+  margin-left:auto;
+  margin-right:auto;
+  width: 88%;
+  min-width: 500;
+  max-width: 1360px;
+  background-color: #FFFFFF;
+  box-shadow: 5px 5px 5px #828282;
+}
+
 #cpuTable {
   width: 700px;
+}
+
+.popular {  ;when i list popular parts in a list
+  font-weight: bold;
+  color: #000000;
+  font-size: 14pt;
+}
+
+.updateinfo {
+  font-style: italic;
+  font-size: 11pt;
 }
