--- a/css/web.css
+++ b/css/web.css
@@ -47,15 +47,7 @@ h1 {
   text-decoration: none;
 }
 
-#navlist li {
-  float: left;
-}
-
-#navlist:visited {
-  color: #0080FF;
-  text-decoration: none;
-}
-
+/* ul formatting for nav */
 #navlist ul {
   list-style-type: none;
   margin: 0;
@@ -63,6 +55,12 @@ h1 {
   overflow: hidden;
 }
 
+/* this makes the nav items float to the left of each other */
+#navlist li {
+  float: left;
+}
+
+/* nav list links formatting */
 #navlist li a{
   display: block;
   color: #FFFFFF;
@@ -72,7 +70,12 @@ h1 {
   padding-right: 15px;
 }
 
-#navlist li a:hover {
+#navlistcurrent {
+  color: #0080FF;
+  text-decoration: none;
+}
+
+#navlist li:hover a {
     color: #0080FF;
 }
 
@@ -81,12 +84,13 @@ body {
 }
 
 footer {
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 20px;
   text-align: center;
   font-weight: bold;
   font-style: italic;
   color: #000000;
+  clear: right;
 }
 
 table {
@@ -124,10 +128,6 @@ border: 1px solid #000000;
   font-size: 11pt;
 }
 
-.currentnav {
-    color: #0080FF;
-}
-
 .threecolumn {
   width: 33.33%;
   float: left;
@@ -151,4 +151,14 @@ form {
 .gif {
   height: 500px;
   width: 500px;
+  float: right;
+  padding-left: 30px;
+  margin-top:-20px;
+}
+
+#gifcaption {
+  font-style:italic;
+  font-size: 8pt;
+  font-style: Arial;
+  text-align: center;
 }
